--- a/git-server/Cargo.toml
+++ b/git-server/Cargo.toml
@@ -14,6 +14,8 @@ diesel = {version = "1.4", features = ["mysql", "chrono"]}
 env_logger = "0.9"
 futures = "0.3"
 git2 = "0.13"
+lazy_static = "1.4"
+regex = "1"
 rust-s3 = "0.28"
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
