--- a/git-server/Cargo.toml
+++ b/git-server/Cargo.toml
@@ -16,7 +16,8 @@ futures = "0.3"
 git2 = "0.13"
 jsonwebtoken = "7.2"
 lazy_static = "1.4"
+log = "0.4"
 regex = "1"
-rust-s3 = "0.28"
+rust-s3 = {version = "0.28", default-features = false, features = ["sync"]}
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
